# whatdov2

./: README.md
app/whatdo2/domain/task/: private.py  public.py  types.py
backend/: Makefile  mypy.ini  pyproject.toml
backend/tests/domain/: test_task.py
backend/tests/unit/adapters/: test_task_repository.py
backend/tests/unit/domain/: test_task.py
backend/tests/unit/infrastructure/: test_task_repository.py
backend/whatdo2/: __init__.py  config.py  logging.py  utils.py
backend/whatdo2/adapters/: orm.py  sql_task_repository.py  task_repository.py
backend/whatdo2/domain/: typedefs.py  utils.py
backend/whatdo2/domain/task/: core.py  events.py  private.py  public.py  typedefs.py  types.py
backend/whatdo2/entrypoints/: fast_api.py
backend/whatdo2/infrastructure/: task_repository.py
backend/whatdo2/service_layer/: eventbus.py  task_command_service.py  task_query_service.py  task_service.py  unit_of_work.py
